--- a/api/package.json
+++ b/api/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rsclone-api",
+  "name": "nest-rest-api",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -52,6 +52,7 @@
     "@typescript-eslint/parser": "^4.6.1",
     "eslint": "^7.12.1",
     "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-nestjs": "^1.2.3",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-use-decorator": "^0.1.3",
     "jest": "^26.6.3",
