--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "buildn": "react-scripts build && cp _redirects build/_redirects"
+    "buildn": "react-scripts build && cp _redirects build/_redirects",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
